<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbr_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="martin@todo.todo">martin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <exec_depend>gazebo_ros2_control</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
