<?xml version="1.0"?>
<package format="2">
  <name>lbr_control</name>
  <version>1.0.0</version>
  <description>A package containing controllers used by MoveIt! and Gazebo</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>

</package>