<?xml version="1.0"?>
<package format="2">
  <name>lbr_description</name>
  <version>1.0.0</version>
  <description>KUKA LBR description files</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
