<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbr_examples</name>
  <version>0.0.0</version>
  <description>Examples for controlling the LBR robots through the Fast Robot Interface (FRI).</description>
  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>lbr_state_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
