<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbr_fri_ros</name>
  <version>1.0.0</version>
  <description>ROS2 wrapper for KUKA fast robot interface</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>TODO: add license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>fri</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
