<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbr_fri_ros2</name>
  <version>2.0.0</version>
  <description>The lbr_fri_ros2 package provides the Fast Robot Interface (FRI) integration into ROS
    2. Robot states can be extracted and commanded.</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>control_toolbox</depend>
  <depend>fri_client_sdk</depend>
  <depend>kdl_parser</depend>
  <depend>lbr_fri_idl</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>
  <depend>urdf</depend>

  <exec_depend>lbr_description</exec_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>