<?xml version="1.0"?>
<package format="2">
  <name>lbr_gazebo</name>
  <version>0.1.0</version>
  <description>lbr_gazebo</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>lbr_control</exec_depend>
  <exec_depend>lbr_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
