<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbr_hardware</name>
  <version>1.0.0</version>
  <description>ROS2 hardware hardware_interface for KUKA LBR through Fast Robot Interface (FRI).</description>
  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>fri</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
