<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbr_hardware_interface</name>
  <version>1.2.2</version>
  <description>ROS 2 hardware hardware_interface for KUKA LBR through Fast Robot Interface (FRI).</description>
  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>lbr_fri_msgs</depend>
  <depend>lbr_fri_ros2</depend>
  <depend>fri</depend>

  <exec_depend>lbr_description</exec_depend>

  <exec_depend>ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>